automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,7 @@
     "resid2 = model2.resid\n",
     "fig = sm.graphics.qqplot(resid1, dist=stats.norm, line='45', fit=True)\n",
     "fig = sm.graphics.qqplot(resid2, dist=stats.norm, line='45', fit=True)\n",
-    "plt.show() # had to "
+    "plt.show()     # had to chang efrom fig.show()"
    ]
   },
   {
